--- a/Documentación/memoria.tex
+++ b/Documentación/memoria.tex
@@ -471,7 +471,7 @@ A \textbf{brief} presentation of the topic addressed in the project.
 \begin{abstract}
 keywords separated by commas.
 \end{abstract}
-
+Augmented reality, Unity, Vuforia, Android, Educational tools \ldots
 \clearpage
 
 % Indices
