--- a/Documentación/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/tex/4_Tecnicas_y_herramientas.tex
@@ -46,9 +46,9 @@ Una limitación importante es que únicamente esta disponible para sistemas iOS 
 
 CoSpaces\footnote{\url{https://cospaces.io/edu/}} es una plataforma de apoyo educativo. Se puede acceder a ella tanto por web, como desde la aplicación de móvil. Permite a los profesores crear salas para sus alumnos donde tendrían acceso a los diferentes ejemplos a usar para sus clases. También cuenta con una galería donde los usuarios pueden compartir sus ejemplos.
 
-\imagen{cospaces2}{Imagen de mi plataforma de desarrollo de CoSpaces (Captura de pantalla).}
+\imagen{Memoria/cospaces2}{Imagen de mi plataforma de desarrollo de CoSpaces (Captura de pantalla).}
 
-Para la creación de proyectos, se puede hacer desde la web mediante un entorno de desarrollo 3D, donde puedes añadir paredes, objetos y mas tipos de modelos3D, para tu escenario. Con una licencia gratuita, permite guardar dos proyectos como máximo al mismo tiempo, en la imagen~\ref{fig:cospaces2} se puede observar el entorno descrito. En los proyectos también es posible codificar eventos, acciones mediante una programación de bloques o scripts, aunque hay que destacar, que la programación por scripts y algunas opciones de la programación de bloques únicamente están disponibles con una licencia premium. Para añadir un modelo 3D, que Cospace no ofrezca por defecto, se pueden subir desde un archivo local o desde la búsqueda integrada de CoSpace en Google Poly (biblioteca pública de Google de modelos 3D\footnote{\url{https://poly.google.com/}}).
+Para la creación de proyectos, se puede hacer desde la web mediante un entorno de desarrollo 3D, donde puedes añadir paredes, objetos y mas tipos de modelos3D, para tu escenario. Con una licencia gratuita, permite guardar dos proyectos como máximo al mismo tiempo, en la imagen~\ref{fig:Memoria/cospaces2} se puede observar el entorno descrito. En los proyectos también es posible codificar eventos, acciones mediante una programación de bloques o scripts, aunque hay que destacar, que la programación por scripts y algunas opciones de la programación de bloques únicamente están disponibles con una licencia premium. Para añadir un modelo 3D, que Cospace no ofrezca por defecto, se pueden subir desde un archivo local o desde la búsqueda integrada de CoSpace en Google Poly (biblioteca pública de Google de modelos 3D\footnote{\url{https://poly.google.com/}}).
 CoSpace también cuenta con la opción de diseñar proyectos para el Mergecube, aunque este plugin se encuentra disponible para la versión premium.
 
 
@@ -95,9 +95,9 @@ Usa la tecnología SLAM (Simultaneous Localization and Mapping) para el reconoci
 
 Kudan soporta los siguientes formatos 3D: FBX, OBJ y COLLADA.
 
-En la imagen \ref{fig:marta_2} podemos ver un ejemplo de la aplicación M.A.R.T.A\footnote{\url{https://play.google.com/store/apps/details?id=com.apophistechlabs.marta}} que utiliza Kudan para detectar una superficie en la que colocar el modelo 3D.
+En la imagen \ref{fig:Memoria/marta_2} podemos ver un ejemplo de la aplicación M.A.R.T.A\footnote{\url{https://play.google.com/store/apps/details?id=com.apophistechlabs.marta}} que utiliza Kudan para detectar una superficie en la que colocar el modelo 3D.
 
-\imagenPeque{marta_2}{Imagen perteneciente a la aplicación M.A.R.T.A~\cite{marta_app}.}
+\imagenPeque{Memoria/marta_2}{Imagen perteneciente a la aplicación M.A.R.T.A~\cite{marta_app}.}
 
 
 
@@ -107,9 +107,9 @@ Vuforia\footnote{\url{https://developer.vuforia.com/}} es un kit de desarrollo (
 
 Vuforia proporciona una API en C++, Java, Objective-C++ y los lenguajes de .NET mediante Unity.
 
-Vuforia soporta diferentes tipos marcadores~(Ejemplos en la figura~\ref{fig:vuforia01}), estos pueden ser 2D o 3D, también soporta múltiples marcadores simultáneamente, y reconocimiento del terreno sin marcadores.
+Vuforia soporta diferentes tipos marcadores~(Ejemplos en la figura~\ref{fig:Memoria/vuforia01}), estos pueden ser 2D o 3D, también soporta múltiples marcadores simultáneamente, y reconocimiento del terreno sin marcadores.
 
-\imagen{vuforia01}{Posibles marcadores de Vuforia}
+\imagen{Memoria/vuforia01}{Posibles marcadores de Vuforia}
 
 Los marcadores se pueden crear desde la página web developer vuforia, para ello deben escoger qué tipo de marcadores se quieren crear y adjuntarle las imágenes que formarán dicho marcador. La página dará una calificación de 5 estrellas según la calidad de la imagen para ser un marcador. Una vez completado, da la opción de descargarlos el un archivo configurable de Unity que incluirá los marcadores en nuestro proyecto.
 
