--- a/Documentación/bibliografiaAnexos.bib
+++ b/Documentación/bibliografiaAnexos.bib
@@ -95,3 +95,10 @@
 	note = "[Internet; descargado 15-Julio-2020 ]"
 }
 
+
+@misc{apache,
+	author = "Apache",
+	title = "APACHE LICENSE, VERSION 2.0 ",
+	howpublished = "\url{https://www.apache.org/licenses/LICENSE-2.0}",
+	note = "[Internet; descargado 17-Julio-2020 ]"
+}
