--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -278,5 +278,4 @@ El proyecto se han utilizado recursos para Unity de licencias gratuitas. Se trat
 	Commercial Use\\
 	}
 
-Para este proyecto, se ha decidido usar una licencia Apache 2.0 pues es una de las que tiene realización con las licencias de....
-\url{https://support.ptc.com/help/flexplm/r11.1_m010/en/index.html#page/FlexPLM_Help_Center/common/copyright/SW_AboutBox.html}
+Para este proyecto, se ha decidido usar una licencia Apache 2.0~\cite{apache} , ya que actualmente se trata de una de las licencias con mas uso debido a su flexibilidad.
